--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "start": "node server.js",
     "build": "cd client && npm run build",
     "install-client": "cd client && npm install",
-    "heroku-postbuild": " npm run install-client && npm build",
+    "heroku-postbuild": " npm run install-client && npm run build",
     "client": "node server.js"
   },
   "author": "",
